GUI-8804 fix network text wrapping in monitor graph

--- a/assets/stylesheets/less/partials/monitor.less
+++ b/assets/stylesheets/less/partials/monitor.less
@@ -801,6 +801,12 @@
 
                 #donut3 {
                     .font(@color: @color-bg-graph-three);
+                    .donutInfo {
+                        width: 130px;
+                    }
+                    .network {
+                        white-space: nowrap;
+                    }
                 }
 
                 #donutStats3 {
